h2o-k8s/tests/clustering/h2o-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h2o-deployment # Deployment used for better job observability during tests, do not use in production.
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: h2o-k8s
  template:
    metadata:
      labels:
        app: h2o-k8s
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: h2o-k8s
          image: 'harbor.h2o.ai/opsh2oai/h2o-3-k8s-runner'
          ports:
            - containerPort: 54321
              protocol: TCP
          volumeMounts:
            - name: test-volume
              mountPath: "h2o.jar"
      volumes:
      - name: test-volume
        hostPath:
          path: $H2O_BASE/build/h2o.jar
          type: File
---
apiVersion: v1
kind: Service
metadata:
  name: h2o-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: h2o-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 54321
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: h2o-service
          servicePort: 80
